fixed overflow issue

--- a/src/App.css
+++ b/src/App.css
@@ -26,6 +26,7 @@
 
 body {
   background-color: #282c34;
+  overflow-x: hidden;
 }
 
 .App-link {
